--- a/quotes/web-scraper-quotes.ipynb
+++ b/quotes/web-scraper-quotes.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Build a Web Scraper in Python"
+    "# Web Scraping in Python with Requests, Beautiful Spoup, Selector Gadget and pandas."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*This tutorial is mainly based on [Build a Web Scraper with Python in 5 Minutes](https://www.kdnuggets.com/2022/02/build-web-scraper-python-5-minutes.html) by Natassha Selvaraj as well as the [BeautifulSoup documentation](https://www.crummy.com/software/BeautifulSoup/bs4/doc/).*"
+    "*This tutorial is mainly based on [Build a Web Scraper with Python in 5 Minutes](https://www.kdnuggets.com/2022/02/build-web-scraper-python-5-minutes.html) by Natassha Selvaraj as well as the [Beautiful Soup documentation](https://www.crummy.com/software/BeautifulSoup/bs4/doc/).*"
    ]
   },
   {
@@ -22,15 +22,18 @@
     "> In this tutorial, we will create a web scraper in Python to scrape a site called [“Quotes to Scrape”](https://quotes.toscrape.com/). \n",
     "\n",
     "\n",
-    "We will:\n",
+    "In this tutorial, you will learn how to:\n",
     "\n",
-    "1. Extract raw HTML from a website\n",
-    "\n",
-    "\n",
-    "1. Using the `BeautifulSoup` library to extract content from the site\n",
+    "1. Scrape a web page with [Requests](https://docs.python-requests.org/en/latest/). \n",
     "\n",
     "\n",
-    "1. Store data into a Pandas dataframe"
+    "1. Pulling data out of HTML using  [Beautiful Soup](https://www.crummy.com/software/BeautifulSoup/bs4/doc/).\n",
+    "\n",
+    "\n",
+    "1. Use [Selector Gadget](https://chrome.google.com/webstore/detail/selectorgadget/mhjhnkcfbdhnjickkkdbjoemdmbfginb) to inspect the CSS of the web page.\n",
+    "\n",
+    "\n",
+    "1. Store the scraped data in a [pandas](https://pandas.pydata.org/) dataframe.\n"
    ]
   },
   {
@@ -48,7 +51,7 @@
     "\n",
     "- Some basic understanding of HTML and CSS as well as the Chrome extension SelectorGadget. Follow the instructions in this [web scraping tutorial](https://kirenz.github.io/codelabs/codelabs/webscraping/#0) to learn more.\n",
     "\n",
-    "- The open source data science platform [Anaconda](https://kirenz.github.io/python-basics/docs/programming-toolkit.html#anaconda)"
+    "- The open source data science platform [Anaconda](https://kirenz.github.io/python-basics/docs/programming-toolkit.html#anaconda)."
    ]
   },
   {
@@ -73,22 +76,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Open the site [“Quotes to Scrape”](https://quotes.toscrape.com/) \n",
-    "- Start SelectorGadget in Google Chrome and review the site."
+    "## Scrape website with Requests"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Scrape website"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- First, we use `requests` to scrape the complete page (using a GET request)"
+    "- First, we use `requests` to scrape the complete page (using a GET request).\n",
+    "\n",
+    "- `requests.get()` fetches all the content from a particular website and returns a response object (we called it `html`):"
    ]
   },
   {
@@ -106,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Check if the response was succesfull:"
+    "- Check if the response was succesful:"
    ]
   },
   {
@@ -140,22 +137,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Investigate HTML page"
+    "## Investigate HTML with Beautiful Soup"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- `requests.get()` fetches all the content from a particular website and returns a response object (we called it `html`)\n",
-    "\n",
-    "- We can use this response object to access certain features such as content, text, headers, etc. \n",
+    "- We can use the response object to access certain features such as content, text, headers, etc. \n",
     "\n",
     "- In our example, we only want to obtain `text` from the object\n",
     "\n",
-    "- Therefore, we use `html.text` which returns the text of the response\n",
+    "- Therefore, we use `html.text` which only returns the text of the response\n",
     "\n",
-    "- Running `html` through BeautifulSoup gives us a BeautifulSoup object."
+    "- Running `html.text` through BeautifulSoup gives us a Beautiful Soup object:"
    ]
   },
   {
@@ -171,7 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- It represents the document as a nested data structure:"
+    "- `soup` represents the document as a nested data structure:"
    ]
   },
   {
@@ -586,13 +581,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Investigate data structure"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Here are some simple ways to navigate that data structure."
    ]
   },
@@ -600,7 +588,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Get all text"
+    "### Get all text"
    ]
   },
   {
@@ -839,7 +827,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Investigate elements"
+    "### Investigate title"
    ]
   },
   {
@@ -933,7 +921,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Hyperlink"
+    "### Investigate hyperlinks"
    ]
   },
   {
@@ -960,7 +948,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Specific text element"
+    "### Investigate a text element"
    ]
   },
   {
@@ -987,7 +975,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Since there are many div tags in the source code we can’t use this approach to extract relevant information.\n",
+    "### Extract specific elements with find"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Our goal is to obtain all quotes, authors and tags from the website [“Quotes to Scrape”](https://quotes.toscrape.com/) \n",
+    "\n",
+    "- We want to store all information in a pandas dataframe (every row should contain a quote as well as the corresponding author and tags).   \n",
+    "\n",
+    "- Start [SelectorGadget](https://chrome.google.com/webstore/detail/selectorgadget/mhjhnkcfbdhnjickkkdbjoemdmbfginb) in Google Chrome and review the site."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Since there are many div tags in the source code we can’t use the previous approach to extract relevant information\n",
     "\n",
     "- Instead, we need to use the `find` and `find_all` methods. \n",
     "\n",
@@ -998,181 +1004,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Find elements"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- BeautifulSoup has methods like `find()` and `findAll()` that you can use to extract specific HTML tags from the web page."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Extract all urls"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- One common task is extracting all the URLs found within a page’s <a> tags:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<a href=\"/\" style=\"text-decoration: none\">Quotes to Scrape</a>,\n",
-       " <a href=\"/login\">Login</a>,\n",
-       " <a href=\"/author/Albert-Einstein\">(about)</a>,\n",
-       " <a class=\"tag\" href=\"/tag/change/page/1/\">change</a>,\n",
-       " <a class=\"tag\" href=\"/tag/deep-thoughts/page/1/\">deep-thoughts</a>,\n",
-       " <a class=\"tag\" href=\"/tag/thinking/page/1/\">thinking</a>,\n",
-       " <a class=\"tag\" href=\"/tag/world/page/1/\">world</a>,\n",
-       " <a href=\"/author/J-K-Rowling\">(about)</a>,\n",
-       " <a class=\"tag\" href=\"/tag/abilities/page/1/\">abilities</a>,\n",
-       " <a class=\"tag\" href=\"/tag/choices/page/1/\">choices</a>,\n",
-       " <a href=\"/author/Albert-Einstein\">(about)</a>,\n",
-       " <a class=\"tag\" href=\"/tag/inspirational/page/1/\">inspirational</a>,\n",
-       " <a class=\"tag\" href=\"/tag/life/page/1/\">life</a>,\n",
-       " <a class=\"tag\" href=\"/tag/live/page/1/\">live</a>,\n",
-       " <a class=\"tag\" href=\"/tag/miracle/page/1/\">miracle</a>,\n",
-       " <a class=\"tag\" href=\"/tag/miracles/page/1/\">miracles</a>,\n",
-       " <a href=\"/author/Jane-Austen\">(about)</a>,\n",
-       " <a class=\"tag\" href=\"/tag/aliteracy/page/1/\">aliteracy</a>,\n",
-       " <a class=\"tag\" href=\"/tag/books/page/1/\">books</a>,\n",
-       " <a class=\"tag\" href=\"/tag/classic/page/1/\">classic</a>,\n",
-       " <a class=\"tag\" href=\"/tag/humor/page/1/\">humor</a>,\n",
-       " <a href=\"/author/Marilyn-Monroe\">(about)</a>,\n",
-       " <a class=\"tag\" href=\"/tag/be-yourself/page/1/\">be-yourself</a>,\n",
-       " <a class=\"tag\" href=\"/tag/inspirational/page/1/\">inspirational</a>,\n",
-       " <a href=\"/author/Albert-Einstein\">(about)</a>,\n",
-       " <a class=\"tag\" href=\"/tag/adulthood/page/1/\">adulthood</a>,\n",
-       " <a class=\"tag\" href=\"/tag/success/page/1/\">success</a>,\n",
-       " <a class=\"tag\" href=\"/tag/value/page/1/\">value</a>,\n",
-       " <a href=\"/author/Andre-Gide\">(about)</a>,\n",
-       " <a class=\"tag\" href=\"/tag/life/page/1/\">life</a>,\n",
-       " <a class=\"tag\" href=\"/tag/love/page/1/\">love</a>,\n",
-       " <a href=\"/author/Thomas-A-Edison\">(about)</a>,\n",
-       " <a class=\"tag\" href=\"/tag/edison/page/1/\">edison</a>,\n",
-       " <a class=\"tag\" href=\"/tag/failure/page/1/\">failure</a>,\n",
-       " <a class=\"tag\" href=\"/tag/inspirational/page/1/\">inspirational</a>,\n",
-       " <a class=\"tag\" href=\"/tag/paraphrased/page/1/\">paraphrased</a>,\n",
-       " <a href=\"/author/Eleanor-Roosevelt\">(about)</a>,\n",
-       " <a class=\"tag\" href=\"/tag/misattributed-eleanor-roosevelt/page/1/\">misattributed-eleanor-roosevelt</a>,\n",
-       " <a href=\"/author/Steve-Martin\">(about)</a>,\n",
-       " <a class=\"tag\" href=\"/tag/humor/page/1/\">humor</a>,\n",
-       " <a class=\"tag\" href=\"/tag/obvious/page/1/\">obvious</a>,\n",
-       " <a class=\"tag\" href=\"/tag/simile/page/1/\">simile</a>,\n",
-       " <a href=\"/page/2/\">Next <span aria-hidden=\"true\">→</span></a>,\n",
-       " <a class=\"tag\" href=\"/tag/love/\" style=\"font-size: 28px\">love</a>,\n",
-       " <a class=\"tag\" href=\"/tag/inspirational/\" style=\"font-size: 26px\">inspirational</a>,\n",
-       " <a class=\"tag\" href=\"/tag/life/\" style=\"font-size: 26px\">life</a>,\n",
-       " <a class=\"tag\" href=\"/tag/humor/\" style=\"font-size: 24px\">humor</a>,\n",
-       " <a class=\"tag\" href=\"/tag/books/\" style=\"font-size: 22px\">books</a>,\n",
-       " <a class=\"tag\" href=\"/tag/reading/\" style=\"font-size: 14px\">reading</a>,\n",
-       " <a class=\"tag\" href=\"/tag/friendship/\" style=\"font-size: 10px\">friendship</a>,\n",
-       " <a class=\"tag\" href=\"/tag/friends/\" style=\"font-size: 8px\">friends</a>,\n",
-       " <a class=\"tag\" href=\"/tag/truth/\" style=\"font-size: 8px\">truth</a>,\n",
-       " <a class=\"tag\" href=\"/tag/simile/\" style=\"font-size: 6px\">simile</a>,\n",
-       " <a href=\"https://www.goodreads.com/quotes\">GoodReads.com</a>,\n",
-       " <a href=\"https://scrapinghub.com\">Scrapinghub</a>]"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "soup.find_all('a')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Make output more readable"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/\n",
-      "/login\n",
-      "/author/Albert-Einstein\n",
-      "/tag/change/page/1/\n",
-      "/tag/deep-thoughts/page/1/\n",
-      "/tag/thinking/page/1/\n",
-      "/tag/world/page/1/\n",
-      "/author/J-K-Rowling\n",
-      "/tag/abilities/page/1/\n",
-      "/tag/choices/page/1/\n",
-      "/author/Albert-Einstein\n",
-      "/tag/inspirational/page/1/\n",
-      "/tag/life/page/1/\n",
-      "/tag/live/page/1/\n",
-      "/tag/miracle/page/1/\n",
-      "/tag/miracles/page/1/\n",
-      "/author/Jane-Austen\n",
-      "/tag/aliteracy/page/1/\n",
-      "/tag/books/page/1/\n",
-      "/tag/classic/page/1/\n",
-      "/tag/humor/page/1/\n",
-      "/author/Marilyn-Monroe\n",
-      "/tag/be-yourself/page/1/\n",
-      "/tag/inspirational/page/1/\n",
-      "/author/Albert-Einstein\n",
-      "/tag/adulthood/page/1/\n",
-      "/tag/success/page/1/\n",
-      "/tag/value/page/1/\n",
-      "/author/Andre-Gide\n",
-      "/tag/life/page/1/\n",
-      "/tag/love/page/1/\n",
-      "/author/Thomas-A-Edison\n",
-      "/tag/edison/page/1/\n",
-      "/tag/failure/page/1/\n",
-      "/tag/inspirational/page/1/\n",
-      "/tag/paraphrased/page/1/\n",
-      "/author/Eleanor-Roosevelt\n",
-      "/tag/misattributed-eleanor-roosevelt/page/1/\n",
-      "/author/Steve-Martin\n",
-      "/tag/humor/page/1/\n",
-      "/tag/obvious/page/1/\n",
-      "/tag/simile/page/1/\n",
-      "/page/2/\n",
-      "/tag/love/\n",
-      "/tag/inspirational/\n",
-      "/tag/life/\n",
-      "/tag/humor/\n",
-      "/tag/books/\n",
-      "/tag/reading/\n",
-      "/tag/friendship/\n",
-      "/tag/friends/\n",
-      "/tag/truth/\n",
-      "/tag/simile/\n",
-      "https://www.goodreads.com/quotes\n",
-      "https://scrapinghub.com\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in soup.find_all('a'):\n",
-    "    print(i.get('href'))"
+    "> BeautifulSoup has methods like `find()` and `find_all()` that you can use to extract specific HTML tags from the web page."
    ]
   },
   {
@@ -1325,7 +1157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create dataframe for all quotes, authors and tags"
+    "## Create dataframe for all quotes, authors and tags"
    ]
   },
   {
@@ -1396,7 +1228,9 @@
     "    {'Quotes':quotes,\n",
     "     'Authors':authors,\n",
     "     'Tags':tags\n",
-    "    })"
+    "    })\n",
+    "\n",
+    "df"
    ]
   },
   {
@@ -1540,13 +1374,6 @@
    "source": [
     "df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
