--- a/salary/web-scraping-salary.ipynb
+++ b/salary/web-scraping-salary.ipynb
@@ -47,9 +47,7 @@
    "source": [
     "To start this tutorial, you need: \n",
     "\n",
-    "- Some basic understanding of HTML and CSS as well as the Chrome extension SelectorGadget. Follow the instructions in this [web scraping tutorial](https://kirenz.github.io/codelabs/codelabs/webscraping/#0) to learn more.\n",
-    "\n",
-    "- The open source data science platform [Anaconda](https://kirenz.github.io/python-basics/docs/programming-toolkit.html#anaconda)."
+    "- Some basic understanding of HTML and CSS as well as the Chrome extension SelectorGadget. Follow the instructions in this [web scraping tutorial](https://kirenz.github.io/codelabs/codelabs/webscraping/#0) to learn more."
    ]
   },
   {
@@ -74,9 +72,7 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.ticker as ticker\n",
-    "\n",
-    "sns.set_theme(style=\"ticks\")"
+    "import matplotlib.ticker as ticker"
    ]
   },
   {
