--- a/salary/web-scraping-salary.ipynb
+++ b/salary/web-scraping-salary.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Web scraping tutorial \n",
-    "\n",
-    "Salaries of college presidents"
+    "# Web scraping and data preparation using Beautiful Soup, Requests and pandas"
    ]
   },
   {
@@ -22,7 +20,7 @@
    "source": [
     "In this tutorial, you will learn how to:\n",
     "\n",
-    "1. Get a web page with [Requests](https://docs.python-requests.org/en/latest/) \n",
+    "1. Scrape a web page with [Requests](https://docs.python-requests.org/en/latest/) \n",
     "\n",
     "\n",
     "1. Pulling data out of HTML using  [Beautiful Soup](https://www.crummy.com/software/BeautifulSoup/bs4/doc/)\n",
@@ -31,7 +29,7 @@
     "1. Perform data tidying using [pandas](https://pandas.pydata.org/)\n",
     "\n",
     "\n",
-    "1. Visualize data data with [seaborn](https://seaborn.pydata.org/) and [Matplotlib](https://matplotlib.org/)"
+    "1. Visualize data with [seaborn](https://seaborn.pydata.org/) and [Matplotlib](https://matplotlib.org/)"
    ]
   },
   {
@@ -47,7 +45,9 @@
    "source": [
     "To start this tutorial, you need: \n",
     "\n",
-    "- Some basic understanding of HTML and CSS as well as the Chrome extension SelectorGadget. Follow the instructions in this [web scraping tutorial](https://kirenz.github.io/codelabs/codelabs/webscraping/#0) to learn more."
+    "- Some basic understanding of HTML and CSS as well as the Chrome extension SelectorGadget. \n",
+    "\n",
+    "> Follow the instructions in this [web scraping tutorial](https://kirenz.github.io/codelabs/codelabs/webscraping/#0) to learn more."
    ]
   },
   {
@@ -126,7 +126,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- We use the `requests` library for retrieving the HTML content from this webpage:"
+    "\n",
+    "- There are 2 pieces of information we want extract from the text:\n",
+    "\n",
+    "  - names of the presidents\n",
+    "  - salaries "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- We use the `requests` library for retrieving the complete HTML content from this webpage:"
    ]
   },
   {
@@ -180,17 +191,6 @@
    "metadata": {},
    "source": [
     "## Investigate HTML with Beautiful Soup"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "- There are 2 pieces of information we need want extract from the text:\n",
-    "\n",
-    "  - names of the presidents\n",
-    "  - salaries "
    ]
   },
   {
@@ -902,27 +902,30 @@
     }
    ],
    "source": [
+    "# use seaborn style whitegrid and hide grid\n",
     "sns.set_style(\"whitegrid\", {'axes.grid' : False})\n",
     "\n",
-    "\n",
+    "# prepare plot\n",
     "fig, ax = plt.subplots()\n",
     "\n",
-    "\n",
+    "# create barplot\n",
     "sns.barplot(x=\"salary\", \n",
     "            y=\"name\", \n",
     "            color=\"#3F83F4\",\n",
-    "            #edgecolor = 'k', \n",
     "            linewidth = 2,\n",
     "            data=df);\n",
     "\n",
+    "# define style of data output on x-axis\n",
     "ax.xaxis.set_major_formatter('{x:1.0f} k $')\n",
     "ax.xaxis.set_major_formatter(ticker.EngFormatter(' $'))\n",
     "ax.xaxis.set_tick_params(which='major', labelcolor='grey')  \n",
-    "\n",
+    "# define y-axis\n",
     "ax.yaxis.set_tick_params(which='major', labelcolor='grey', labelleft=True)\n",
     "\n",
+    "# hide top and right lines around plot\n",
     "sns.despine()\n",
     "\n",
+    "# we don't want a label\n",
     "plt.ylabel(\"\")\n",
     "plt.xlabel(\"\")\n",
     "\n",
