--- a/salary/web-scraping-salary copy.ipynb
+++ b/salary/web-scraping-salary copy.ipynb
@@ -201,7 +201,7 @@
     "# Make the GET request to a url\n",
     "url = 'http://www.cleveland.com/metro/index.ssf/2017/12/case_western_reserve_university_president_barbara_snyders_base_salary_and_bonus_pay_tops_among_private_colleges_in_ohio.html'\n",
     "\n",
-    "# html = requests.get(___)"
+    "html = requests.get(url)"
    ]
   },
   {
@@ -271,7 +271,7 @@
    },
    "outputs": [],
    "source": [
-    "soup = BeautifulSoup(___, 'html.parser')"
+    "soup = BeautifulSoup(html.text, 'html.parser')"
    ]
   },
   {
@@ -299,21 +299,115 @@
     }
    },
    "source": [
-    "- Investigate the element `ul`\n",
-    "- Use .prettify() to make the output more readable"
+    "- Investigate the element `ul`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<ul class=\"article__unordered-list\">\n",
+      " <li>\n",
+      "  <span>\n",
+      "   Grant Cornwell, College of Wooster (left in 2015): $911,651\n",
+      "  </span>\n",
+      " </li>\n",
+      " <li>\n",
+      "  <span>\n",
+      "   Marvin Krislov, Oberlin College (left in 2016):  $829,913\n",
+      "  </span>\n",
+      " </li>\n",
+      " <li>\n",
+      "  <span>\n",
+      "   Mark Roosevelt, Antioch College, (left in 2015): $507,672\n",
+      "  </span>\n",
+      " </li>\n",
+      " <li>\n",
+      "  <span>\n",
+      "   Laurie Joyner, Wittenberg University (left in 2015): $463,504\n",
+      "  </span>\n",
+      " </li>\n",
+      " <li>\n",
+      "  <span>\n",
+      "   Richard Giese, University of Mount Union (left in 2015): $453,800\n",
+      "  </span>\n",
+      " </li>\n",
+      " <li>\n",
+      "  <span>\n",
+      "   Sean Decatur,Kenyon College: $451,698\n",
+      "  </span>\n",
+      " </li>\n",
+      " <li>\n",
+      "  <span>\n",
+      "   Adam Weinberg, Denison University: $435,322\n",
+      "  </span>\n",
+      " </li>\n",
+      " <li>\n",
+      "  <span>\n",
+      "   Daniel Dibiasio, Ohio Northern University: $414,716\n",
+      "  </span>\n",
+      " </li>\n",
+      " <li>\n",
+      "  <span>\n",
+      "   Denvy Bowman, Capital University (left in 2016): $388,570\n",
+      "  </span>\n",
+      " </li>\n",
+      " <li>\n",
+      "  <span>\n",
+      "   Anne Steele, Muskingum University (left in 2016): $384,233\n",
+      "  </span>\n",
+      " </li>\n",
+      " <li>\n",
+      "  <span>\n",
+      "   Kathy Krendl, Otterbein University:  $378,035\n",
+      "  </span>\n",
+      " </li>\n",
+      " <li>\n",
+      "  <span>\n",
+      "   Rockwell Jones, Ohio Wesleyan University: $366,625\n",
+      "  </span>\n",
+      " </li>\n",
+      " <li>\n",
+      "  <span>\n",
+      "   Robert Helmer, Baldwin Wallace University: $365,616\n",
+      "  </span>\n",
+      " </li>\n",
+      " <li>\n",
+      "  <span>\n",
+      "   Robert Huntington, Heidelberg University: $300,005\n",
+      "  </span>\n",
+      " </li>\n",
+      " <li>\n",
+      "  <span>\n",
+      "   Lori Varlotta, Hiram College: $293,336\n",
+      "  </span>\n",
+      " </li>\n",
+      " <li>\n",
+      "  <span>\n",
+      "   Joseph Bruno, Marietta College (left in 2016): $288,295\n",
+      "  </span>\n",
+      " </li>\n",
+      " <li>\n",
+      "  <span>\n",
+      "   W. Richard Merriman Jr., University of Mount Union (started in June 2015): $221,761\n",
+      "  </span>\n",
+      " </li>\n",
+      "</ul>\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# print(___)"
+    "print(soup.ul.prettify())"
    ]
   },
   {
@@ -337,7 +431,7 @@
    },
    "outputs": [],
    "source": [
-    "# u_list = ___"
+    "u_list = soup.ul"
    ]
   },
   {
@@ -361,20 +455,45 @@
     }
    },
    "source": [
-    "- Next, we iterate over the element `__?___` from `u_list` (use find_all)"
+    "- Next, we iterate over the element `span` from `u_list` "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grant Cornwell, College of Wooster (left in 2015): $911,651\n",
+      "Marvin Krislov, Oberlin College (left in 2016):  $829,913\n",
+      "Mark Roosevelt, Antioch College, (left in 2015): $507,672\n",
+      "Laurie Joyner, Wittenberg University (left in 2015): $463,504\n",
+      "Richard Giese, University of Mount Union (left in 2015): $453,800\n",
+      "Sean Decatur,Kenyon College: $451,698\n",
+      "Adam Weinberg, Denison University: $435,322\n",
+      "Daniel Dibiasio, Ohio Northern University: $414,716\n",
+      "Denvy Bowman, Capital University (left in 2016): $388,570\n",
+      "Anne Steele, Muskingum University (left in 2016): $384,233\n",
+      "Kathy Krendl, Otterbein University:  $378,035\n",
+      "Rockwell Jones, Ohio Wesleyan University: $366,625\n",
+      "Robert Helmer, Baldwin Wallace University: $365,616\n",
+      "Robert Huntington, Heidelberg University: $300,005\n",
+      "Lori Varlotta, Hiram College: $293,336\n",
+      "Joseph Bruno, Marietta College (left in 2016): $288,295\n",
+      "W. Richard Merriman Jr., University of Mount Union (started in June 2015): $221,761\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "for i in u_list.find_all('span'):\n",
+    "    print(i.text)"
    ]
   },
   {
@@ -398,7 +517,10 @@
    },
    "outputs": [],
    "source": [
-    "# your code here"
+    "raw_text = []\n",
+    "\n",
+    "for i in u_list.find_all('span'):\n",
+    "    raw_text.append(i.text)"
    ]
   },
   {
@@ -431,22 +553,145 @@
     }
    },
    "source": [
-    "- We want to use pandas to perform our data tidying so let's create a dataframe (call the column \"text\"):"
+    "- We want to use pandas to perform our data tidying so let's create a dataframe:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Grant Cornwell, College of Wooster (left in 20...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Marvin Krislov, Oberlin College (left in 2016)...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mark Roosevelt, Antioch College, (left in 2015...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Laurie Joyner, Wittenberg University (left in ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Richard Giese, University of Mount Union (left...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Sean Decatur,Kenyon College: $451,698</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Adam Weinberg, Denison University: $435,322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Daniel Dibiasio, Ohio Northern University: $41...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Denvy Bowman, Capital University (left in 2016...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Anne Steele, Muskingum University (left in 201...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Kathy Krendl, Otterbein University:  $378,035</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Rockwell Jones, Ohio Wesleyan University: $366...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Robert Helmer, Baldwin Wallace University: $36...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Robert Huntington, Heidelberg University: $300...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Lori Varlotta, Hiram College: $293,336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Joseph Bruno, Marietta College (left in 2016):...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>W. Richard Merriman Jr., University of Mount U...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 text\n",
+       "0   Grant Cornwell, College of Wooster (left in 20...\n",
+       "1   Marvin Krislov, Oberlin College (left in 2016)...\n",
+       "2   Mark Roosevelt, Antioch College, (left in 2015...\n",
+       "3   Laurie Joyner, Wittenberg University (left in ...\n",
+       "4   Richard Giese, University of Mount Union (left...\n",
+       "5               Sean Decatur,Kenyon College: $451,698\n",
+       "6         Adam Weinberg, Denison University: $435,322\n",
+       "7   Daniel Dibiasio, Ohio Northern University: $41...\n",
+       "8   Denvy Bowman, Capital University (left in 2016...\n",
+       "9   Anne Steele, Muskingum University (left in 201...\n",
+       "10      Kathy Krendl, Otterbein University:  $378,035\n",
+       "11  Rockwell Jones, Ohio Wesleyan University: $366...\n",
+       "12  Robert Helmer, Baldwin Wallace University: $36...\n",
+       "13  Robert Huntington, Heidelberg University: $300...\n",
+       "14             Lori Varlotta, Hiram College: $293,336\n",
+       "15  Joseph Bruno, Marietta College (left in 2016):...\n",
+       "16  W. Richard Merriman Jr., University of Mount U..."
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#df = pd.DataFrame( {\"___\": ___} )\n",
+    "df = pd.DataFrame( {\"text\": raw_text} )\n",
     "\n",
-    "# df"
+    "df"
    ]
   },
   {
@@ -539,20 +784,89 @@
    },
    "outputs": [],
    "source": [
-    "# df['name'] = df['text'].str.split(\"___\").str.get(___)"
+    "df['name'] = df['text'].str.split(\",\").str.get(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Grant Cornwell, College of Wooster (left in 20...</td>\n",
+       "      <td>Grant Cornwell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Marvin Krislov, Oberlin College (left in 2016)...</td>\n",
+       "      <td>Marvin Krislov</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mark Roosevelt, Antioch College, (left in 2015...</td>\n",
+       "      <td>Mark Roosevelt</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Laurie Joyner, Wittenberg University (left in ...</td>\n",
+       "      <td>Laurie Joyner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Richard Giese, University of Mount Union (left...</td>\n",
+       "      <td>Richard Giese</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text            name\n",
+       "0  Grant Cornwell, College of Wooster (left in 20...  Grant Cornwell\n",
+       "1  Marvin Krislov, Oberlin College (left in 2016)...  Marvin Krislov\n",
+       "2  Mark Roosevelt, Antioch College, (left in 2015...  Mark Roosevelt\n",
+       "3  Laurie Joyner, Wittenberg University (left in ...   Laurie Joyner\n",
+       "4  Richard Giese, University of Mount Union (left...   Richard Giese"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# df.head()"
+    "df.head()"
    ]
   },
   {
@@ -587,20 +901,95 @@
    },
    "outputs": [],
    "source": [
-    "# your code here"
+    "df['salary'] = df['text'].str.split(\"$\").str.get(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>name</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Grant Cornwell, College of Wooster (left in 20...</td>\n",
+       "      <td>Grant Cornwell</td>\n",
+       "      <td>911,651</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Marvin Krislov, Oberlin College (left in 2016)...</td>\n",
+       "      <td>Marvin Krislov</td>\n",
+       "      <td>829,913</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mark Roosevelt, Antioch College, (left in 2015...</td>\n",
+       "      <td>Mark Roosevelt</td>\n",
+       "      <td>507,672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Laurie Joyner, Wittenberg University (left in ...</td>\n",
+       "      <td>Laurie Joyner</td>\n",
+       "      <td>463,504</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Richard Giese, University of Mount Union (left...</td>\n",
+       "      <td>Richard Giese</td>\n",
+       "      <td>453,800</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text            name   salary\n",
+       "0  Grant Cornwell, College of Wooster (left in 20...  Grant Cornwell  911,651\n",
+       "1  Marvin Krislov, Oberlin College (left in 2016)...  Marvin Krislov  829,913\n",
+       "2  Mark Roosevelt, Antioch College, (left in 2015...  Mark Roosevelt  507,672\n",
+       "3  Laurie Joyner, Wittenberg University (left in ...   Laurie Joyner  463,504\n",
+       "4  Richard Giese, University of Mount Union (left...   Richard Giese  453,800"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# df.head()"
+    "df.head()"
    ]
   },
   {
@@ -624,7 +1013,7 @@
    },
    "outputs": [],
    "source": [
-    "# df['salary'] = df['salary'].str.replace(\"__\", \"\")"
+    "df['salary'] = df['salary'].str.replace(\",\", \"\")"
    ]
   },
   {
@@ -635,12 +1024,12 @@
     }
    },
    "source": [
-    "- Make the salary data numeric (as int32)"
+    "- Make the data numeric"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -648,20 +1037,37 @@
    },
    "outputs": [],
    "source": [
-    " # df['___'] = df['___'].astype(\"___\")"
+    "df['salary'] = df['salary'].astype(\"int32\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 17 entries, 0 to 16\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   text    17 non-null     object\n",
+      " 1   name    17 non-null     object\n",
+      " 2   salary  17 non-null     int32 \n",
+      "dtypes: int32(1), object(2)\n",
+      "memory usage: 468.0+ bytes\n"
+     ]
+    }
+   ],
    "source": [
-    "# df.info()"
+    "df.info()"
    ]
   },
   {
