--- a/quotes/web-scraping-quotes.ipynb
+++ b/quotes/web-scraping-quotes.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -164,7 +164,7 @@
        "200"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -731,7 +731,7 @@
        "<title>Quotes to Scrape</title>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -766,7 +766,7 @@
        "'title'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -801,7 +801,7 @@
        "'Quotes to Scrape'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -836,7 +836,7 @@
        "'head'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -882,7 +882,7 @@
        "<a href=\"/\" style=\"text-decoration: none\">Quotes to Scrape</a>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -917,7 +917,7 @@
        "'“The world as we have created it is a process of our thinking. It cannot be changed without changing our thinking.”'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1156,7 +1156,7 @@
        " </div>]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,6 +1167,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -1178,23 +1179,12 @@
     "\n",
     "  - we want to store all text quotes in a new array called `quotes_text` (you need top provide an empty list)\n",
     "  - To extract the quotes, note that the text of the quotes are available in the tag `span` as \"`class`:`text`\" (see output above))\n",
-    "  - finally, we can use the method `.text` to make sure we only extract text\n",
-    "  \n",
-    "Some hints:  \n",
-    "  \n",
-    " ```python \n",
-    "# create empty array\n",
-    "quotes_text = []\n",
-    "\n",
-    "# use for loop to write quotes in quotes_text with append\n",
-    " for i in ___:\n",
-    "    ___.append((___.find('___', {'___':'___'})).___)\n",
-    "```  "
+    "  - finally, we can use the method `.text` to make sure we only extract text  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1210,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1228,7 +1218,7 @@
        " '“A day without sunshine is like, you know, night.”']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1238,7 @@
        "'“The world as we have created it is a process of our thinking. It cannot be changed without changing our thinking.”'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1267,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1291,7 +1281,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>quotes</th>\n",
+       "      <th>quote</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1340,7 +1330,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                                              quotes\n",
+       "                                               quote\n",
        "0  “The world as we have created it is a process ...\n",
        "1  “It is our choices, Harry, that show what we t...\n",
        "2  “There are only two ways to live your life. On...\n",
@@ -1353,7 +1343,7 @@
        "9  “A day without sunshine is like, you know, nig..."
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1387,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1605,7 +1595,7 @@
        "</html>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1615,6 +1605,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -1628,46 +1619,23 @@
     "- Instead, we use a different approach:\n",
     "  - create an emtpty array mit the name `authors_text`\n",
     "  - use the `soup` object and implement the `find_all()` function in a for loop to extract the authors (take a look at the code where we created `quotes_all`):\n",
-    "  \n",
-    "Hint:\n",
-    "\n",
-    "```python\n",
-    "___ = []\n",
-    "\n",
-    "for i in ___.___(\"___\",{\"___\": \"___\"}):\n",
-    "    ___.___((___.___(\"___\", {\"___\": \"___\"})).___)\n",
-    "```"
+    "  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Albert Einstein\n",
-      "J.K. Rowling\n",
-      "Albert Einstein\n",
-      "Jane Austen\n",
-      "Marilyn Monroe\n",
-      "Albert Einstein\n",
-      "André Gide\n",
-      "Thomas A. Edison\n",
-      "Eleanor Roosevelt\n",
-      "Steve Martin\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "authors_text = []\n",
+    "\n",
     "for i in soup.findAll(\"div\",{\"class\": \"quote\"}):\n",
-    "    print((i.find(\"small\", {\"class\": \"author\"})).text)"
+    "    authors_text.append((i.find(\"small\", {\"class\": \"author\"})).text)"
    ]
   },
   {
@@ -1682,9 +1650,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>author</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Albert Einstein</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>J.K. Rowling</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Albert Einstein</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Jane Austen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Marilyn Monroe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Albert Einstein</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>André Gide</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Thomas A. Edison</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Eleanor Roosevelt</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Steve Martin</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              author\n",
+       "0    Albert Einstein\n",
+       "1       J.K. Rowling\n",
+       "2    Albert Einstein\n",
+       "3        Jane Austen\n",
+       "4     Marilyn Monroe\n",
+       "5    Albert Einstein\n",
+       "6         André Gide\n",
+       "7   Thomas A. Edison\n",
+       "8  Eleanor Roosevelt\n",
+       "9       Steve Martin"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_authors = pd.DataFrame({\"author\" : authors_text})\n",
     "df_authors"
@@ -1699,9 +1755,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>quote</th>\n",
+       "      <th>author</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>“The world as we have created it is a process ...</td>\n",
+       "      <td>Albert Einstein</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>“It is our choices, Harry, that show what we t...</td>\n",
+       "      <td>J.K. Rowling</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>“There are only two ways to live your life. On...</td>\n",
+       "      <td>Albert Einstein</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>“The person, be it gentleman or lady, who has ...</td>\n",
+       "      <td>Jane Austen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>“Imperfection is beauty, madness is genius and...</td>\n",
+       "      <td>Marilyn Monroe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>“Try not to become a man of success. Rather be...</td>\n",
+       "      <td>Albert Einstein</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>“It is better to be hated for what you are tha...</td>\n",
+       "      <td>André Gide</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>“I have not failed. I've just found 10,000 way...</td>\n",
+       "      <td>Thomas A. Edison</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>“A woman is like a tea bag; you never know how...</td>\n",
+       "      <td>Eleanor Roosevelt</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>“A day without sunshine is like, you know, nig...</td>\n",
+       "      <td>Steve Martin</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               quote             author\n",
+       "0  “The world as we have created it is a process ...    Albert Einstein\n",
+       "1  “It is our choices, Harry, that show what we t...       J.K. Rowling\n",
+       "2  “There are only two ways to live your life. On...    Albert Einstein\n",
+       "3  “The person, be it gentleman or lady, who has ...        Jane Austen\n",
+       "4  “Imperfection is beauty, madness is genius and...     Marilyn Monroe\n",
+       "5  “Try not to become a man of success. Rather be...    Albert Einstein\n",
+       "6  “It is better to be hated for what you are tha...         André Gide\n",
+       "7  “I have not failed. I've just found 10,000 way...   Thomas A. Edison\n",
+       "8  “A woman is like a tea bag; you never know how...  Eleanor Roosevelt\n",
+       "9  “A day without sunshine is like, you know, nig...       Steve Martin"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_quotes.join(df_authors)"
    ]
@@ -1743,7 +1898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1849,7 +2004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1895,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1923,7 +2078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2007,7 +2162,7 @@
        "4                 be-yourself,inspirational  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2027,7 +2182,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('bigdata')",
+   "display_name": "webscraping",
    "language": "python",
    "name": "python3"
   },
@@ -2045,7 +2200,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "3f7961e1065d36f999187343dac68c3d5122b5945fe15c860ea81f46690c2f35"
+    "hash": "147de23312147813b0623f895fe208f672aacb131d01c672b840a7a22f97849e"
    }
   }
  },
